--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,10 @@
         android:theme="@style/Theme.ECO2"
         tools:targetApi="31">
         <activity
-            android:name=".toDo"
+            android:name=".newsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".todoActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
