--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.ECO2"
         tools:targetApi="31">
         <activity
+            android:name=".listActivity"
+            android:exported="false" />
+        <activity
             android:name=".newsActivity"
             android:exported="false" />
         <activity
